[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/walls/half_t.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/walls/cross.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/map.gd" type="Script" id=5]
[ext_resource path="res://nodes/walls/full_t.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/walls/half_corner.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D"]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 74, 62 )
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="cross" parent="." instance=ExtResource( 4 )]
position = Vector2( 521, 325 )

[node name="full_t" parent="." instance=ExtResource( 6 )]
position = Vector2( 427, 279 )

[node name="half_t" parent="." instance=ExtResource( 3 )]
position = Vector2( 427, 515 )

[node name="half_corner" parent="." instance=ExtResource( 7 )]
position = Vector2( 130, 342 )
